# vector-clock

./: Makefile  NEWS.md  README.md  todo.org  vector-clock.cabal
Data/: VectorClock.hs
Data/VectorClock/: Approximate.hs  Simple.hs
Test/: Props.hs
src/Data/VectorClock/: Approximate.hs  Simple.hs
test/: Props.hs
