Name:           vector-clock
Version:        0.0.1
Cabal-Version:  >= 1.6
License:        GPL-3
License-File:   LICENSE
Stability:      experimental
Author:         Alexandru Scvortov <scvalex@gmail.com>
Maintainer:     scvalex@gmail.com
Homepage:       https://github.com/scvalex/vector-clock
Category:       Data, Data Structures, Distributed Computing
Synopsis:       Vector clocks for versioning message flows
Build-type:     Simple
Description:
        The vector-clocks library provides a ready to use
        implementation of the vector clock data-structures, which may
        be used to version messages and determine causality relations
        between messages in a distributed system.
        .
        See /Fundamentals of Distributed Computing: A Practical Tour
        of Vector Clock Systems/ by Baldoni and Raynal for an overview
        of vector clocks.
        .
        See the README.md file for details.

Extra-source-files:     Makefile

Data-files:             README.md, NEWS.md

Source-repository head
  Type:                 git
  Location:             git://github.com/scvalex/vector-clock.git

Library
  Build-Depends:         base >= 4 && <5, binary
  Ghc-options:           -Wall
  Exposed-modules:       Data.VectorClock
